--- a/en/meta.yml
+++ b/en/meta.yml
@@ -7,10 +7,11 @@ copyedit: false
 last_tested: "2021-03-26"
 steps:
   - title: Introduction
-  - title: Step title
-  - title: Step title
+  - title: What are you selling?
+  - title: Add your content
     completion: engaged
-  - title: Step title
+  - title: Use animation
+  - title: Add more style
     completion: internal
   - title: Reflection
     knowledge_quiz:
