Added meta title and meta description

--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,6 +1,8 @@
 title: Sell me something
 hero_image: images/banner.png
 description: Make a webpage for a product or idea.
+meta_title: Learn web development | Build a landing page | Sell
+meta_description: Learn web development for beginners with the Raspberry Pi Foundation. Use HTML and CSS to build a landing page to sell a product or idea. 
 version: 4
 listed: false
 copyedit: false
