--- a/en/meta.yml
+++ b/en/meta.yml
@@ -4,8 +4,8 @@ description: Make a webpage for a product or idea.
 meta_title: Learn web development | Build a landing page | Sell
 meta_description: Learn web development for beginners with the Raspberry Pi Foundation. Use HTML and CSS to build a landing page to sell a product or idea. 
 version: 4
-listed: false
-copyedit: false
+listed: true
+copyedit: true
 last_tested: "2021-03-26"
 steps:
   - title: Introduction
